# customer-service-bot

./: .gitignore  Dockerfile  LICENSE  README.md  chatbot_interface.py  pyproject.toml
src/: app_config.py  main.py  main_agent.py  prompt.py  schema.py
src/database_handler/: agent_profile.py  data_parser.py  mongo_handler.py  pdf_parser.py  qdrant_handler.py  qdrant_main.py
